--- a/vignettes/sir_models.Rmd
+++ b/vignettes/sir_models.Rmd
@@ -208,7 +208,7 @@ n_particles <- 5L
 dt <- 0.25
 model <- gen_age$new(data = list(dt = dt,
                                  S_ini = contact$demography$population,
-                                 I_ini = rep(10,8),
+                                 I_ini = c(0,10,0,0,0,0,0,0),
                                  beta = 0.2 / 12.11,
                                  gamma = 0.1,
                                  m = transmission,
@@ -219,7 +219,7 @@ model <- gen_age$new(data = list(dt = dt,
                      seed = 1L)
 
 # Define how long the model runs for, number of steps
-n_steps <- 400
+n_steps <- 1000
 
 # Create an array to contain outputs after looping the model.
 # Array contains 35 rows = Total S, I, R (3), and
