--- a/vignettes/sir_models.Rmd
+++ b/vignettes/sir_models.Rmd
@@ -208,7 +208,7 @@ n_particles <- 5L
 dt <- 0.25
 model <- gen_age$new(data = list(dt = dt,
                                  S_ini = contact$demography$population,
-                                 I_ini = c(0,10,0,0,0,0,0,0),
+                                 I_ini = c(0, 10, 0, 0, 0, 0, 0, 0),
                                  beta = 0.2 / 12.11,
                                  gamma = 0.1,
                                  m = transmission,
