--- a/vignettes/porting.Rmd
+++ b/vignettes/porting.Rmd
@@ -185,6 +185,7 @@ Supported distributions:
 * binomial (`rbinom`)
 * exponential (`rexp`)
 * normal (`rnorm`)
+* hypergeometric (`rhyper`)
 * Poisson (`rpois`)
 * uniform (`unif`)
 
@@ -199,7 +200,6 @@ Unsupported distributions
 * non-central F (`rnf`)
 * gamma (`rgamma`)
 * geometric (`rgeom`)
-* hypergeometric (`rhyper`)
 * logistic (`rlogis`)
 * lognormal (`rlnorm`)
 * negative binomial (`rnbinom`)
@@ -226,6 +226,8 @@ In the binomial case you can rewrite the multinomial sampling as a series of bin
 y[1] <- rbinom(size, prob[1])
 y[2:length(y)] <- rbinom(size - sum(y[1:(i - 1)]), prob[i])
 ```
+
+A similar transform is possible for the multivariate hypergeometric from the hypergeometric (see [odin's `rmhyper` implementation for details](https://github.com/mrc-ide/odin/blob/f36738bb106e2f9289dbb2b94c67ffdb6cf5e0ed/inst/library.c#L358-L375)).
 
 ## Interface differences
 
